refacto(api) : remove V1 kpi api and refactor kpis model to send totals when endpoint is called
